# sc-tools-experiments

./: .gitignore  PLAN-iteration-trace-streaming.md  README.md  cabal.project  cabal.project.schema-gen  devenv.nix  flake.nix
.github/workflows/: ci-linux.yaml  gh-pages.yaml  nix.yaml  push-to-cachix.yaml
aiken-contracts-example/: README.md  aiken.toml  update-blueprint.sh
aiken-contracts-example/lib/ctf/: bank_types.ak
aiken-contracts-example/validators/: check_answer.ak  ctf_bank_00_account.ak  ctf_bank_00_bank.ak  ctf_bank_01_account.ak  ctf_bank_01_bank.ak  ctf_bank_02_account.ak  ctf_bank_02_bank.ak  ctf_bank_03_account.ak  ctf_bank_03_bank.ak  ctf_hello_world.ak  ctf_king_of_cardano.ak  ctf_lending.ak  ctf_multisig_treasury.ak  ctf_multisig_treasury_v2.ak  ctf_multisig_treasury_v3.ak  ctf_purchase_offer.ak  ctf_sell_nft.ak  ctf_tipjar.ak  ctf_tipjar_v2.ak  ctf_vesting.ak  ping_pong.ak  tipjar.ak
nix/: outputs.nix  project.nix  shell.nix
scripts/: list-test-suites.sh
src/base/lib/Convex/: BuildTx.hs  Class.hs
src/coin-selection/: convex-coin-selection.cabal
src/coin-selection/test/: Scripts.hs  Spec.hs
src/coin-selection/test/Scripts/: PingPong.hs
src/coin-selection/test/Scripts/PingPong/Vulnerable/: UnprotectedScriptOutput.hs
src/mockchain/: convex-mockchain.cabal
src/mockchain/lib/Convex/: MockChain.hs
src/mockchain/lib/Convex/MockChain/: Coverage.hs  Defaults.hs  ThreatModel.hs  Utils.hs
src/mockchain/lib/Convex/MockChain/ThreatModel/: DoubleSatisfaction.hs  Pretty.hs  TxModifier.hs
src/mockchain/lib/Convex/MockChain/ThreatModel/Cardano/: Api.hs
src/schema-gen/: convex-schema-gen.cabal
src/schema-gen/app/: Main.hs
src/schema-gen/lib/Convex/: SchemaGen.hs
src/tasty-streaming/: README.md  convex-tasty-streaming.cabal
src/tasty-streaming/lib/Convex/Tasty/: HUnit.hs  QuickCheck.hs  Streaming.hs
src/tasty-streaming/lib/Convex/Tasty/Streaming/: QCStats.hs  SrcLoc.hs  TMSummary.hs  TreeMap.hs  Types.hs
src/tasty-streaming/schema/: streaming-events.schema.json
src/tasty-streaming/test/: Spec.hs
src/tasty-streaming/test/Convex/Tasty/: SrcLocSpec.hs
src/testing-interface/: README.md  convex-testing-interface.cabal
src/testing-interface/lib/Convex/: TestingInterface.hs  ThreatModel.hs
src/testing-interface/lib/Convex/TestingInterface/: MockChain.hs  Options.hs  Trace.hs
src/testing-interface/lib/Convex/TestingInterface/Trace/: TxSummary.hs
src/testing-interface/lib/Convex/ThreatModel/: All.hs  DatumBloat.hs  DoubleSatisfaction.hs  DuplicateListEntry.hs  InputDuplication.hs  InvalidDatumIndex.hs  InvalidScriptPurpose.hs  LargeData.hs  LargeValue.hs  MissingOutputDatum.hs  MutualExclusion.hs  NegativeInteger.hs  OutputDatumHashMissing.hs  Pretty.hs  RedeemerAssetSubstitution.hs  SelfReferenceInjection.hs  SignatoryRemoval.hs  TimeBoundManipulation.hs  TokenForgery.hs  TxModifier.hs  UnprotectedScriptOutput.hs  ValueUnderpayment.hs
src/testing-interface/lib/Convex/ThreatModel/Cardano/: Api.hs
src/testing-interface/test/: AikenBankSpec.hs  AikenHelloWorldSpec.hs  AikenKingOfCardanoSpec.hs  AikenLendingSpec.hs  AikenMultisigTreasurySpec.hs  AikenMultisigTreasuryV2Spec.hs  AikenMultisigTreasuryV3Spec.hs  AikenPingPongSpec.hs  AikenPurchaseOfferSpec.hs  AikenSellNftSpec.hs  AikenSpec.hs  AikenTipJarSpec.hs  AikenTipJarV2Spec.hs  AikenVestingSpec.hs  BountySpec.hs  PingPongCoverageSpec.hs  PingPongSpec.hs  SampleSpec.hs  Scripts.hs  Spec.hs
src/testing-interface/test/Scripts/: Bounty.hs  PingPong.hs  Sample.hs
src/testing-interface/test/Scripts/Bounty/Vulnerable/: DoubleSatisfaction.hs
src/testing-interface/test/Scripts/PingPong/: Vulnerable.hs
src/testing-interface/test/data/: aiken-contracts-example.json
src/use-cases/: convex-use-cases.cabal  hie.yaml
src/use-cases/lib/Convex/UseCases/: Utils.hs
src/use-cases/test/: Spec.hs
src/use-cases/test/Auction/: Scripts.hs  Utils.hs  Validator.hs
src/use-cases/test/Auction/Spec/: Attacks.hs  Prop.hs  Spec.hs  Unit.hs
src/use-cases/test/Contracts/: AuctionValidator.hs  Vesting.hs
src/use-cases/test/Escrow/: Scripts.hs  Validator.hs
src/use-cases/test/Escrow/Spec/: Prop.hs  Spec.hs  Unit.hs
src/use-cases/test/Model/: VestingModel.hs
src/use-cases/test/MultiPlayerPingPong/: Scripts.hs  Validator.hs
src/use-cases/test/MultiPlayerPingPong/Spec/: Prop.hs  Spec.hs  Unit.hs
src/use-cases/test/Scripts/: AuctionScript.hs  VestingScript.hs
src/use-cases/test/Specs/: AuctionSpec.hs  VestingSpec.hs
src/use-cases/test/Utils/: AuctionUtils.hs  VestingUtils.hs
src/use-cases/test/Vesting/: Model.hs  Scripts.hs  Utils.hs  Validator.hs
src/use-cases/test/Vesting/Spec/: Prop.hs  Spec.hs  Unit.hs
src/wallet/lib/Convex/: Wallet.hs
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
