cabal-version: 3.0
name:          convex-schema-gen
version:       0.1.0.0
synopsis:      JSON Schema generator for sc-tools streaming events
license:       Apache-2.0
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    GADTs
    ImportQualifiedPost
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications

library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules: Convex.SchemaGen
  build-depends:
    , aeson
    , base                       >=4.14.0
    , convex-tasty-streaming
    , convex-testing-interface
    , insert-ordered-containers
    , lens
    , openapi3                   >=3.2    && <3.3
    , text

executable gen-schema
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aeson-pretty
    , base               >=4.14.0
    , bytestring
    , convex-schema-gen
