cabal-version: 3.0
name:          convex-tasty-streaming
version:       0.1.0.0
synopsis:      Streaming NDJSON test reporter for Tasty
license:       Apache-2.0
license-files: LICENSE
maintainer:    bogdan.manole@iohk.io
author:        Bogdan Manole
description:
  A Tasty ingredient that streams test results as newline-delimited JSON (NDJSON)
  to stdout. Designed for consumption by IDE extensions and external tooling
  that need real-time structured test output.

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.Tasty.Streaming
    Convex.Tasty.Streaming.TreeMap
    Convex.Tasty.Streaming.Types

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , async
    , base        >=4.14.0
    , bytestring
    , containers
    , stm
    , tagged
    , tasty       >=1.4
    , text
