cabal-version: 3.0
name:          convex-testing-interface
version:       0.1.0.0
synopsis:
  Property-based testing interface for Cardano smart contracts

license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  A testing framework for property-based testing of Cardano smart contracts
  using QuickCheck and the Convex mockchain.

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.TestingInterface
    Convex.ThreatModel
    Convex.ThreatModel.Cardano.Api
    Convex.ThreatModel.DoubleSatisfaction
    Convex.ThreatModel.Pretty
    Convex.ThreatModel.TxModifier
    Convex.ThreatModel.UnprotectedScriptOutput

  hs-source-dirs:  lib
  build-depends:
    , base              >=4.14.0
    , bytestring
    , cardano-api
    , containers
    , convex-mockchain
    , convex-wallet
    , lens
    , mtl
    , QuickCheck
    , transformers

  -- cardano dependencies for ThreatModel
  build-depends:
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-slotting
    , cardano-strict-containers
    , convex-base
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , plutus-ledger-api
    , plutus-tx
    , pretty
    , sop-extras
    , text
    , time
