cabal-version: 3.0
name:          convex-testing-interface
version:       0.1.0.0
synopsis:
  Property-based testing interface for Cardano smart contracts

license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  A testing framework for property-based testing of Cardano smart contracts
  using QuickCheck and the Convex mockchain.

build-type:    Simple
data-files:    test/data/aiken-contracts-example.json

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Convex.TestingInterface
    Convex.ThreatModel
    Convex.ThreatModel.All
    Convex.ThreatModel.Cardano.Api
    Convex.ThreatModel.DatumBloat
    Convex.ThreatModel.DoubleSatisfaction
    Convex.ThreatModel.DuplicateListEntry
    Convex.ThreatModel.InputDuplication
    Convex.ThreatModel.LargeData
    Convex.ThreatModel.LargeValue
    Convex.ThreatModel.MutualExclusion
    Convex.ThreatModel.NegativeInteger
    Convex.ThreatModel.Pretty
    Convex.ThreatModel.RedeemerAssetSubstitution
    Convex.ThreatModel.SelfReferenceInjection
    Convex.ThreatModel.SignatoryRemoval
    Convex.ThreatModel.TimeBoundManipulation
    Convex.ThreatModel.TokenForgery
    Convex.ThreatModel.TxModifier
    Convex.ThreatModel.UnprotectedScriptOutput
    Convex.ThreatModel.ValueUnderpayment

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , aeson-pretty
    , base                    >=4.14.0
    , bytestring
    , cardano-api
    , containers
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-optics
    , convex-wallet
    , HUnit
    , lens
    , mtl
    , pretty
    , prettyprinter
    , QuickCheck
    , sop-extras
    , tasty
    , tasty-expected-failure
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time

  -- cardano dependencies for ThreatModel
  build-depends:
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-slotting
    , cardano-strict-containers
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , plutus-ledger-api:plutus-ledger-api-testlib
    , plutus-tx

test-suite convex-testing-interface-test
  import:          lang
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise -Wno-unused-packages

  main-is:         Spec.hs
  other-modules:
    AikenBankSpec
    AikenHelloWorldSpec
    AikenKingOfCardanoSpec
    AikenLendingSpec
    AikenMultisigTreasurySpec
    AikenMultisigTreasuryV2Spec
    AikenMultisigTreasuryV3Spec
    AikenPingPongSpec
    AikenPurchaseOfferSpec
    AikenSellNftSpec
    AikenSpec
    AikenTipJarSpec
    AikenTipJarV2Spec
    AikenVestingSpec
    BountySpec
    Paths_convex_testing_interface
    PingPongCoverageSpec
    PingPongSpec
    SampleSpec
    Scripts
    Scripts.Bounty
    Scripts.Bounty.Vulnerable.DoubleSatisfaction
    Scripts.PingPong
    Scripts.PingPong.Vulnerable
    Scripts.Sample

  autogen-modules: Paths_convex_testing_interface
  build-depends:
    , base                      >=4.14.0
    , bytestring
    , cardano-api
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-optics
    , convex-tasty-streaming
    , convex-testing-interface
    , convex-wallet
    , lens
    , mtl
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , pretty-show
    , prettyprinter
    , QuickCheck
    , tasty
    , tasty-expected-failure
    , tasty-hunit
    , tasty-quickcheck
