cabal-version: 3.0
name:          convex-use-cases
version:       0.1.0.0
synopsis:      Use cases for the convex library
license:       Apache-2.0
license-files: LICENSE
maintainer:    -- @TODO: add maintainer email
author:        -- @TODO: add author name
homepage:      -- @TODO: add homepage URL
bug-reports:   -- @TODO: add bug reports URL
description:
  Please see the README on GitHub at -- @TODO: add homepage URL

build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:        lang

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , mtl
    , transformers

test-suite convex-use-cases-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise -Wno-unused-packages

  main-is:        Spec.hs
  other-modules:
    Contracts.Vesting
    Model.VestingModel
    Scripts.VestingScript
    Specs.VestingSpec
    Utils.VestingUtils

  build-depends:
    , base                                         >=4.14.0
    , cardano-api
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-optics
    , convex-testing-interface
    , convex-wallet
    , lens
    , mtl
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , plutus-tx
    , plutus-tx-plugin
    , pretty-show
    , prettyprinter
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck

test-suite convex-auction-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise -Wno-unused-packages

  main-is:        Specs/AuctionSpec.hs
  other-modules:
    Contracts.AuctionValidator
    Scripts.AuctionScript
    Utils.AuctionUtils

  build-depends:
    , base                                         >=4.14.0
    , bytestring
    , cardano-api
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-optics
    , convex-testing-interface
    , convex-wallet
    , lens
    , mtl
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , plutus-tx
    , plutus-tx-plugin
    , pretty-show
    , prettyprinter
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
